# advisor

./: .dockerignore  Dockerfile  HACKATHON.md  IMPLEMENTATION.md  README.md  categorize_funds.py  direct_growth_categorized.csv  direct_growth_no_corp_action.csv  direct_growth_operational_funds.csv  excluded_corporate_actions.csv  filter_corporate_actions.py  filter_funds.py
backend/: .gitignore  .pylintrc  main.py  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  scheduler.py  schemas.py
backend/app/api/: __init__.py  book.py  clients.py  conversations.py  copilot.py  debrief.py
backend/app/engine/: backend.py  categories.py  history.py  loader.py  market.py  montecarlo.py  pipelines.py  radar_status.py  whatif.py
backend/app/gpu/: client.py  runpod_client.py
backend/app/llm/: __init__.py  call_reasons.py  copilot.py  debrief.py  insights.py  parser.py  provider.py
backend/app/tasks/: baseline.py  refresh_navs.py
backend/app/tools/: __init__.py  impl.py
backend/scripts/: gen_clients.py  load_navs.py  seed.py
frontend/: .env.development  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/mockups/: 01-newspaper-digest.html  02-terminal-radar.html  03-meeting-brief.html  design.md
frontend/src/: app.html
frontend/src/lib/: api.js  icons.js  richtext.js
frontend/src/lib/components/: AllocationBreakdown.svelte  AllocationTrendChart.svelte  AnswerBody.svelte  BookTrendChart.svelte  Briefing.svelte  Copilot.svelte  InsightCard.svelte  ProjectionChart.svelte  RiskPill.svelte  RiskQuadrant.svelte  ShareDebriefModal.svelte  ToolResult.svelte  TopBar.svelte  ValueChart.svelte
frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte  layout.css
frontend/src/routes/advisor/: +page.svelte
frontend/src/routes/clients/: +page.svelte
frontend/src/routes/clients/[id]/: +page.svelte
frontend/src/routes/share/[token]/: +page.svelte
gpu_worker/: Dockerfile  README.md  handler.py  requirements.txt
sim_kernel/: README.md  pyproject.toml
sim_kernel/sim_kernel/: __init__.py  backend.py  jobs.py  montecarlo.py  pipelines.py  state.py  whatif.py
