[project]
name = "sim-kernel"
version = "0.1.0"
description = "The GPU-portable Monte Carlo engine — pure numpy/cupy, no DB, no web framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x[ctk]>=14.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sim_kernel"]
